# sima-cli

./: .gitignore  LICENSE  MANIFEST.in  README-dev.md  README.md  build.sh  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/issue-triage/: config.json  known-issues.md
.github/workflows/: build.yml  codeql.yml  issue-triage.yml  pr-sanitization.yml  publish-installer.yml  publish-pypi.yml  release.yml  security-pr-preflight.yml  sync-install-index.yml  vulcan-ci.yml
docs/sima-cli/: index.md  interactive-shell.md
scripts/: check-cli-python-compat.sh  check_py_compatibility.py  generate_cli_markdown_docs.py  run-tests.sh  set_build_version.py
scripts/driver-installation/: install.bat  linux-host-driver-install.sh
scripts/install/: install.py  linux-mac.sh  sima-cli-install.bat  sima-cli-installer.sh  windows.bat
sima_cli/: __init__.py  __main__.py  __version__.py  cli.py
sima_cli/app_zoo/: app.py  commands.py
sima_cli/auth/: auth0.py  devportal.py  login.py  oauth.py
sima_cli/data/: resources_internal.yaml  resources_public.yaml
sima_cli/discover/: discover.py  linuxll.py
sima_cli/download/: __init__.py  downloader.py
sima_cli/install/: compatibility.py  github_assets.py  hostdriver.py  metadata_info.py  metadata_installer.py  metadata_validator.py  optiview.py  package_builder.py  palette.py  registry.py
sima_cli/mcp/: __init__.py  commands.py  safety.py  server.py
sima_cli/mla/: meminfo.py
sima_cli/model_zoo/: model.py
sima_cli/network/: network.py
sima_cli/playbooks/: __init__.py  commands.py  manager.py
sima_cli/sdk/: cmdexec.py  commands.py  config.py  install.py  linux_devkit_network.py  linux_shared_network.py  neat.py  network_doctor.py  preinstall.py  requirements.json  sample.sima  script.py  stop.py  uninstall.py  utils.py
sima_cli/serial/: serial.py
sima_cli/shell/: __init__.py  shell.py
sima_cli/storage/: nvme.py  sdcard.py
sima_cli/update/: __init__.py  bmaptool.py  bootimg.py  cleanlog.py  elxr.py  local.py  netboot.py  query.py  remote.py  updater.py
sima_cli/upgrade/: selfupdate.py
sima_cli/utils/: __init__.py  api_common.py  artifactory.py  common.py  disk.py  (+17 more)
(+120 files in other folders)
