[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sima-cli"
version = "2.1.15"
description = "CLI tool for SiMa Developer Portal to download models, firmware, and apps."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name="Sima.ai", email="support@sima.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]

dependencies = [
    "click>=8.0",
    "requests>=2.32.4,<3.0",
    "tqdm>=4.64",
    "pyyaml>=6.0",
    "paramiko>=3.5.1",
    "plotext==5.3.2",
    "rich==14.0.0",
    "InquirerPy==0.3.4",
    "tftpy==0.8.6",
    "psutil==7.0.0",
    "huggingface-hub>=0.34.0,<1.0",
    "tabulate==0.9.0",
    "prompt-toolkit>=3.0"
]

[project.urls]
Homepage = "https://community.sima.ai/"

[project.scripts]
sima-cli = "sima_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
markers = [
    "unit: fast tests that mock external dependencies",
    "e2e: tests that require real external services, containers, devices, or credentials",
]
