[metadata]
name = sima-cli
author = Sima.ai
author_email = support@sima.ai
description = CLI tool for SiMa Developer Portal to download models, firmware, and apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://community.sima.ai/
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    sima-cli = sima_cli.cli:main

[options.package_data]
* = *.txt, *.md

[sdist]
formats = gztar
